change css path

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     />
 
     <!--Sass-->
-    <link rel="stylesheet" href="../scss/custom.css" />
+    <link rel="stylesheet" href="/scss/custom.css" />
 
     <title>Portfolio Bootstrap</title>
   </head>
